Mejoras a manejo de imagenes

--- a/src/components/items/list/item.scss
+++ b/src/components/items/list/item.scss
@@ -12,12 +12,10 @@
   }
 
   .thumbnail {
-    padding: $small-space;
-    img {
-      height: $thumbnail-size;
-      width: $thumbnail-size;
-      border-radius: $thumbnail-radius;
-    }
+    margin: $small-space;
+    height: $thumbnail-size;
+    width: $thumbnail-size;
+    border-radius: $thumbnail-radius;
   }
 
   .price {
