--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -23,7 +23,7 @@ $font-xl: 46px;
 $container-padding: 3em;
 $small-radius: 4px;
 $small-space: 16px;
-$big-space: 32px;
+$large-space: 32px;
 $container-radius: $small-radius;
 $grid-breakpoints: (
   xs: 0,
