--- a/src/components/items/list/item.scss
+++ b/src/components/items/list/item.scss
@@ -1,4 +1,5 @@
 @import '../../../stylesheets/variables';
+@import '~bootstrap/scss/mixins/breakpoints';
 
 .item {
   $separator-distance: 2%;
@@ -11,10 +12,10 @@
     background-color: $light-gray;
   }
 
-  .thumbnail {
-    margin: $small-space;
-    height: $thumbnail-size;
-    width: $thumbnail-size;
+  .image-container {
+    padding: $small-space;
+    height: $thumbnail-size + $small-space*2;
+    width: $thumbnail-size + $small-space*2;
     border-radius: $thumbnail-radius;
   }
 
@@ -25,7 +26,9 @@
       bottom: 4px;
     }
 
-    padding: $big-space 0;
+    @include media-breakpoint-up(sm) {
+      padding: $large-space 0;
+    }
 
     .amount {
       font-size: $font-lg;
@@ -46,6 +49,11 @@
   .address {
     font-size: $font-xs;
     color: $dark-gray;
-    padding-top: $big-space*2;
+    @include media-breakpoint-up(sm) {
+      padding-top: $large-space*2;
+    }
+    @include media-breakpoint-only(xs) {
+      padding-bottom: $small-space;
+    }
   }
 }
