--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -18,6 +18,14 @@ $font-sm: 14px;
 $font-md: 18px;
 $font-lg: 24px;
 $font-xl: 46px;
+$main-font:
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  sans-serif;
 
 // Layout
 $container-padding: 3em;
