--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap-reboot';
+@import '~meyer-reset-sass';
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/utilities/text';
 @import '_variables';
@@ -6,6 +7,7 @@
 // Layout
 body {
   background-color: $light-gray;
+  font-family: $main-font;
   font-size: $font-md;
   font-weight: $regular;
   overflow-x: hidden;
