Mejoras al SASS

--- a/src/components/items/detail/itemDetail.scss
+++ b/src/components/items/detail/itemDetail.scss
@@ -1,7 +1,7 @@
 @import '../../../stylesheets/variables';
 @import '~bootstrap/scss/mixins/breakpoints';
 
-.image-container {
+.picture.image-container {
   @include media-breakpoint-down(sm) {
     height: $picture-size/1.75;
     width: $picture-size/1.75;
@@ -14,19 +14,15 @@
     height: $picture-size;
     width: $picture-size;
   }
+  @include media-breakpoint-only(xl) {
+    margin: $small-space !important;
+  }
 }
 
 .info {
-
-  padding-top: $small-space;
-  padding-bottom: $large-space;
-  padding-left: $large-space;
-  padding-right: $large-space;
+  padding: $small-space $large-space $large-space;
   @include media-breakpoint-up(xl) {
-    padding-top: $large-space;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
+    padding: $large-space 0 0;
   }
   color: $black;
 
@@ -39,6 +35,7 @@
 
   .title {
     font-size: $font-lg;
+    font-weight: $bold;
     padding-right: $large-space;
     @include media-breakpoint-up(md) {
       padding-bottom: $small-space;
@@ -48,13 +45,8 @@
   .price {
 
     padding-bottom: $large-space;
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-down(md) {
       padding-bottom: $small-space;
-    }
-
-    %adjust {
-      position: relative;
-      bottom: 14px;
     }
 
     .amount {
@@ -62,10 +54,10 @@
     }
     .decimals {
       font-size: $font-lg;
-      @extend %adjust;
+      position: relative;
+      bottom: 16px;
     }
     .shipping {
-      @extend %adjust;
       padding-left: 8px;
     }
   }
